# OpenJarvis

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: config.example.yaml
config/prompts/: system.md
docs/: architecture.md  design-decisions.md  event-bus.md  handoff-v0.0.1-alpha.md
docs/superpowers/plans/: 2026-06-26-walking-skeleton.md
openjarvis/: __init__.py  __main__.py
openjarvis/asr/: __init__.py  whisper.py
openjarvis/audio/: __init__.py  capture.py
openjarvis/bus/: __init__.py  client.py  schemas.py
openjarvis/conversation/: __init__.py  manager.py
openjarvis/llm/: __init__.py  base.py  registry.py
openjarvis/llm/providers/: __init__.py  anthropic.py
openjarvis/memory/: __init__.py
openjarvis/system/: __init__.py  config.py
openjarvis/tools/: __init__.py  executor.py  registry.py
openjarvis/tools/builtin/: __init__.py  time_tool.py
openjarvis/wake/: __init__.py  detector.py
scripts/: sniff_bus.py
tests/unit/: test_anthropic_provider.py  test_bus_client.py  test_bus_schemas.py  test_config.py  test_conversation_manager.py  test_llm_base.py  test_tool_executor.py  test_tool_registry.py
