[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openjarvis"
version = "0.1.0"
description = "An open-source, model-agnostic voice AI operating assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["voice", "ai", "assistant", "llm", "jarvis", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Audio & Wake Word
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "openwakeword>=0.6.0",
    # ASR
    "faster-whisper>=1.0.0",
    # Event Bus
    "redis>=5.0.0",
    # LLM Providers (optional installs, listed here for discoverability)
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-generativeai>=0.7.0",
    "ollama>=0.2.0",
    # Memory
    "aiosqlite>=0.20.0",
    # MCP
    "mcp>=1.0.0",
    # Utilities
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "ulid-py>=1.1.0",
    "structlog>=24.2.0",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
openjarvis = "openjarvis.__main__:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/OpenJarvis"
Repository = "https://github.com/YOUR_USERNAME/OpenJarvis"
Issues = "https://github.com/YOUR_USERNAME/OpenJarvis/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
